# zax_teste_python

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3197081de7e9_create_tables.py  392c4800c181_insert_in_tables.py
api/config/: database.py
api/model/: order.py  store.py  store_exclusive_worker.py  worker.py
api/repository/: order_repository.py  worker_repository.py
api/routes/: order_router.py  worker_router.py
api/utils/: format_return.py
tests/: order_repository_test.py  worker_repository_test.py
